--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -1024,6 +1024,7 @@ background-color: rgb(0 0 0 / 12%);
 .chatbot.show{
     transform:scale(1.05);
     opacity: 1;
+    z-index: 10;
 }
 /* set arrow positioning */
 .arrow {
@@ -1275,8 +1276,18 @@ font-size: 15px;
     border-top: 2.2px solid #763cb0;
     box-shadow: 0 0.46875rem 2.1875rem 
                 rgb(90 97 105 / 10%), 0 0.9375rem 1.40625rem 
-                rgb(90 97 105 / 10%), 0 0.25rem 0.53125rem 
+                rgba(79, 115, 156, 0.1), 0 0.25rem 0.53125rem 
                 rgb(90 97 105 / 12%), 0 0.125rem 0.1875rem rgb(90 97 105 / 10%);
+}
+.status-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 65px;
+}
+.status{
+    cursor: pointer;
+    color: #58248b;
 }
 .float-btn {
     display: flex;
