--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1232,7 +1232,7 @@ margin-top: 30px;
 }
 .btn-about.hire {
     color: #FFF;
-    background: #763cb0;
+    background-color: #763cb0;
 }
 .btn-about.download {
     color: #FFF;
