--- a/public/css/app.css
+++ b/public/css/app.css
@@ -586,7 +586,7 @@ a:hover{
     pointer-events: none;
     background-color: #5f328b;
 }
-.side-socials{
+.side-socials, .side-buttons{
 display: flex;
 align-items: center;
 justify-content: center;
@@ -620,10 +620,10 @@ margin-top: 30px;
     text-align: center;
     width: 120px;
     height:  40px;
-    margin-top: 15px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 42px;
-    /* will-change: transform; */
-    font-weight: 600;
     background-color: #fff;
     color: #5f328b;
     border-style: none;
