--- a/public/css/app.css
+++ b/public/css/app.css
@@ -722,7 +722,7 @@ margin-top: 30px;
     grid-template-columns: auto auto auto;
     margin-top: 40px;
 }
-.portfolio-item .mask, .portfolio-item svg {
+.portfolio-item .mask, .portfolio-item svg, .portfolio-item .view {
     position: absolute;
     opacity: 0;
     transition: all .3s ease-in-out;
@@ -730,7 +730,7 @@ margin-top: 30px;
 .portfolio-item:hover .mask {
     opacity: 0.85;
 }
-.portfolio-item:hover svg {
+.portfolio-item:hover svg, .portfolio-item:hover .view {
     opacity: 1;
 }
 .portfolio-item svg {
@@ -741,6 +741,20 @@ margin-top: 30px;
     width: 40px;
     stroke-width:1.6;
     z-index: 1;
+}
+.portfolio-item .view {
+    color: #fff;
+    border: solid 2px #fff;
+    font-size: 12px;
+    border-radius: 8px;
+    right: 20px;
+    bottom: 20px;
+    padding: 4px 5px;
+    z-index: 1;
+}
+.view:hover{
+    background-color: #763cb0;
+    cursor: pointer;
 }
 .grid-item{
     position: relative;
@@ -983,6 +997,15 @@ margin-top: 30px;
         height: calc(80% - 80px) !important;
         z-index: 2;
     }
+    .chat-ph{
+        margin-top: 48% !important
+    }
+    .ph-txt.two{
+        width: 140px !important;
+    }
+    .ph-txt{
+        width: 190px !important;
+    }
 }
 @media only screen and (max-width: 320px){
     .timeline .divider {
@@ -1060,6 +1083,10 @@ margin-top: 30px;
 }
 .show-work.col{
     flex-direction: column;
+}
+.show-work.top{
+    align-items: start;
+    justify-content: space-around;
 }
 .block-title {
     display: inline-block;
@@ -1441,4 +1468,52 @@ margin-top: 30px;
     display: grid;
     grid-gap: 10px;
     grid-template-columns: auto auto
+}
+
+/* test*/
+.chat-ph{
+    flex-direction: column;
+    margin-top: 40%;
+    background-color: #0d6efd;
+    width: 170px;
+    height: 170px;
+    padding: 10px;
+    border-radius: 70% 30% 30% 70% / 60% 40% 60% 40%;
+}
+.chat-ph2{
+    flex-direction: column;
+    background-color: #763cb0;
+    width: 220px;
+    height: 220px;
+    padding: 10px;
+    border-radius: 39% 70% 78% 39% / 38% 39% 70% 78%;
+}
+.ph-txt{
+    position: relative;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width:200px;
+    background-color: #c59dec;
+    height: 55px;
+    padding: 7px;
+    border-radius: 12px;
+    margin: 20px 0 0 -35px;
+}
+.ph-txt.two{
+    width:150px;
+    height: 45px;
+    margin: 20px -35px 0 0;
+    background-color: #7badf8;
+}
+
+.ph-txt-line{
+    border-radius: 5px;
+    background-color: #478ffc;
+    width: 100%;
+    height: 7px;
+}
+.ph-txt-line.two{
+    height: 10px !important;
+    background-color: #ac65f3;
 }
