--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -1030,6 +1030,7 @@ background-color: rgb(0 0 0 / 12%);
 .arrow {
 	width: 60px;
 	height: 82px;
+    z-index: 2;
 	position: fixed; /* don't forget set container to relative */
 	right: 7%;
 	margin-left: 0px;
@@ -1294,6 +1295,7 @@ font-size: 15px;
     align-items: center;
     justify-content: center;
     position: fixed;
+    z-index: 2;
     bottom: 9%;
     right: 7%;
     width: 60px;
